<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JobFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_a_profile">Create your profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="headline">Headline</string>
    <string name="phone_number">Phone Number</string>
    <string name="location_ex_london">Location ex : London</string>
    <string name="validate_and_continue">Validate and Continue</string>
    <string name="description">Description</string>
    <string name="address_">Address</string>
    <string name="error_connection">A Connection probem occurs, please check your internet settings</string>
    <string name="error_empty_fields">Oupss !! One or many fields are empty.</string>

</resources>
