<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jobfinder.activities.ProfileActivity" >

    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_create_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_a_profile"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/layout_form_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_create_profile"
            android:layout_margin="8dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txt_first_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/first_name"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/last_name"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_headline"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/headline"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/description"
                android:lines="3"
                android:maxLines="5"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/location_ex_london"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/address_"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearance" />

            <Button
                android:id="@+id/btn_validate_and_continue"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/validate_and_continue" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>